tests/NormalTests/paczka1/fuzzy1/84992851.err
Error in line 9: jE6jsDWbah S203 74,3
Error in line 16: A5k0IT S203 71,7
Error in line 12: S219 S203 30,7
Error in line 25: ItOrr S203 50,2
Error in line 39: S219 S219 25,0
